# rosettax87_jit

./: .clang-format  CMakeLists.txt  LICENSE  README.md  entitlements.plist
.github/workflows/: release.yml
aotinvoke/: CMakeLists.txt
aotinvoke/src/: RosettaAotApi.cpp  RosettaAotApi.h  main.cpp
benchmarks/: CMakeLists.txt  bench_add.c  bench_compare.c  bench_constants.c  bench_div.c  bench_fcmov.c  bench_fistp_multi.c  bench_fistt.c  bench_fstp_fld.c  bench_fusion_arithp_fstp.c  bench_fusion_fcom_fstsw.c  bench_fusion_fld_arith_fstp.c  bench_fusion_fld_arithp.c  bench_fusion_fld_fcomp_fstsw.c  bench_fusion_fld_fstp.c  bench_fusion_fxch_arithp.c  bench_fusion_fxch_fstp.c  bench_fxch.c  bench_load.c  bench_mul.c  bench_round.c  bench_store.c  bench_sub.c  bench_tag_batch.c  bench_unary.c
benchmarks/macro/: CMakeLists.txt  mmo.c
loader/: macho_loader.cpp  macho_loader.hpp  main.cpp  offset_finder.cpp  offset_finder.hpp
rosettaRuntime/: Export.cpp  Export.h  Log.cpp  SIMDGuard.h  X87.cpp  X87.h  X87Float80.h  X87StackRegister.cpp  X87StackRegister.h  X87State.h  main.cpp
rosettaRuntime/openlibm/: e_atan2.h  e_fmod.h  e_log2.h  e_pow.h  e_rem_pio2.h  k_cos.h  k_log.h  k_rem_pio2.h  k_sin.h  k_tan.h  math_private.h  s_atan.h  s_cos.h  s_exp2.h  s_ilogb.h  s_remquo.h  s_scalbn.h  s_sin.h  s_tan.h
rosetta_config/: CMakeLists.txt
rosetta_config/include/rosetta_config/: Config.h
rosetta_config/src/: Config.cpp
rosetta_core/: CMakeLists.txt
rosetta_core/include/rosetta_core/: AssemblerBase.hpp  AssemblerBuffer.h  AssemblerHelpers.hpp  CoreConfig.h  CoreLog.h  CustomTranslationHook.h  Fixup.h  IRBlock.h  IRInstr.h  IRModuleData.h  IROperand.h  ModuleResult.h  Opcode.h  Register.h  RuntimeLibC.h  RuntimeRoutine.h  ThreadContextOffsets.h  TransactionalList.h  TranslationResult.h  Translator.h  TranslatorHelpers.hpp  TranslatorX87.h  TranslatorX87Fusion.h  TranslatorX87Helpers.hpp  X87Cache.h  X87IR.h  X87State.h  hook.h
rosetta_core/src/: AssemblerBase.cpp  AssemblerBuffer.cpp  AssemblerHelpers.cpp  CoreConfig.cpp  CoreLog.cpp  CustomTranslationHook.cpp  Fixup.cpp  IRBlock.cpp  IRInstr.cpp  IRModuleData.cpp  IROperand.cpp  ModuleResult.cpp  Opcode.cpp  Register.cpp  RuntimeLibC.cpp  RuntimeOperatorNew.cpp  RuntimeRoutine.cpp  RuntimeSymbols.cpp  ThreadContextOffsets.cpp  TransactionalList.cpp  TranslationResult.cpp  Translator.cpp  TranslatorHelpers.cpp  TranslatorX87.cpp  TranslatorX87Fusion.cpp  TranslatorX87Helpers.cpp  TranslatorX87Internal.hpp  X87Cache.cpp  X87IRBuild.cpp  X87IRLower.cpp  X87IROptimize.cpp  X87State.cpp  hook.cpp
rosetta_loader/: CMakeLists.txt  entitlements.plist
rosetta_loader/src/: macho_loader.cpp  macho_loader.hpp  main.cpp  offset_finder.cpp  offset_finder.hpp  types.h
rosetta_runtime/: CMakeLists.txt
rosetta_runtime/src/: Export.cpp  Export.h  Log.cpp  Log.h  Offsets.cpp  Offsets.h  RuntimeConfig.cpp  RuntimeConfig.h  SIMDGuard.cpp  SIMDGuard.h  X87.cpp  X87.h  X87Float80.cpp  X87Float80.h  X87StackRegister.cpp  X87StackRegister.h  X87State.cpp  X87State.h  main.cpp
rosetta_runtime/src/openlibm/: e_atan2.h  e_fmod.h  e_log2.h  e_pow.h  e_rem_pio2.h  k_cos.h  k_log.h  k_rem_pio2.h  k_sin.h  k_tan.h  math_private.h  s_atan.h  s_cos.h  s_exp2.h  s_ilogb.h  s_remquo.h  s_scalbn.h  s_sin.h  s_tan.h
sample/: cpuid.c  fsqrt.c
scripts/: inspect_function.sh  run_benchmarks.sh  run_fusion_sweep.sh  run_opcode_sweep.sh  run_tests.sh
tests/: CMakeLists.txt  test_arith.c  test_arithp_fstp.c  test_compare_unary.c  test_deep_stack.c  test_fcmov.c  test_fcom.c  test_fcomi.c  test_fcomp_mem.c  test_fild.c  test_fistp_multi.c  test_fistt.c  test_fld.c  test_fld_fst.c  test_fld_m80fp.c  test_fldconst.c  test_fmul.c  test_frndint.c  test_fstp_fld.c  test_fstpt.c  test_fstpt_gs.c  test_fxam.c  test_fxch.c  test_peephole.c  test_peephole3.c  test_peephole4.c  test_peephole5.c  test_peephole6.c  test_peephole7.c  test_readst_elide.c  test_tag_batch.c  test_x87_full.c
